css for profile image on RHS-top is modified to avoid distortion of image

--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/nroer/styles.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/nroer/styles.css
@@ -9851,7 +9851,6 @@ aside#help p, aside#help h5, aside#help h6 {
 #profile-img {
   height: 40px;
   margin-right: 5px;
-  width: 40px;
 }
 
 /* line 788, ../../../scss/_metastudio_styles.scss */
